--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -274,13 +274,32 @@
             </ContentDialog>
 
         </Grid>
-        <TextBlock
-            Grid.Row="3"
-            Grid.Column="0"
-            x:Name="StatusLabelText"
-            Foreground="#FFFFFF"
-            Text="Status: Idle"
-            HorizontalAlignment="Left"/>
+        <Grid Grid.Row="3"
+            Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="0"
+                x:Name="StatusLabelText"
+                Foreground="#FFFFFF"
+                Text="Status: Idle"
+                HorizontalAlignment="Left"/>
+            <ProgressBar
+                Grid.Row="0"
+                Grid.Column="1"
+                x:Name="MainProgressBar"
+                Width="300"
+                Height="20"
+                Maximum="100"
+                Value="50"
+                Margin="20,0,0,0"/>
+        </Grid>
     </Grid>
 
 </Page>
