--- a/windows/PhotobookUI/ColorScheme.xaml
+++ b/windows/PhotobookUI/ColorScheme.xaml
@@ -5,4 +5,9 @@
     xmlns:local="using:PhotobookUI">
 
     <Color x:Key="PrimaryColor">#1A2224</Color>
+
+    <Color x:Key="BorderColor">#09191D</Color>
+
+    <Color x:Key="ButtonBackgroundColor">#374346</Color>
+
 </ResourceDictionary>
