--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -52,7 +52,7 @@
                 Foreground="#FFFFFF"/>
 
             <winui:MenuBar VerticalAlignment="Top" Grid.Column="1" Grid.Row="0">
-                <winui:MenuBarItem Background="#FF3A3A3A" Title="File" CornerRadius="0">
+                <winui:MenuBarItem Background="{StaticResource ButtonBackgroundColor}" Title="File" CornerRadius="0">
                     <MenuFlyoutItem Text="New" />
                     <MenuFlyoutSeparator />
                     <MenuFlyoutItem Text="Save" />
@@ -131,6 +131,7 @@
             </Grid>
 
             <Border
+                x:Name="CanvasBorder"
                 BorderBrush="{StaticResource BorderColor}"
                 BorderThickness="1"
                 Padding="16,8"
@@ -139,9 +140,9 @@
 
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="10*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
+                        <RowDefinition Height="8*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -153,8 +154,8 @@
                         Grid.Column="0"
                         Grid.ColumnSpan="2">
                         <canvas:CanvasControl
-                            Width="630"
-                            Height="447"
+                            Height="Auto"
+                            Width="Auto"
                             Draw="CanvasControlDraw"
                             x:Name="GalleryCanvas"
                             ClearColor="#000000"/>
@@ -169,29 +170,33 @@
                         Text="No text"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"/>
-
                     <Button
-                        Background="{StaticResource ButtonBackgroundColor}"
                         Click="onGalleryLeft"
                         CornerRadius="0"
                         Grid.Column="0"
                         Grid.Row="2"
-                        Content="Left"
                         x:Name="GalleryLeftButton"
                         Foreground="#FFFFFF"
                         HorizontalAlignment="Right"
-                        IsEnabled="False"/>
+                        Background="{StaticResource ButtonBackgroundDisabled}"
+                        IsEnabled="False"
+                        Height="50">
+                        
+                        <Image Source="Assets/page-left-enabled.png"/>
+                    </Button>
 
                     <Button
-                        Background="{StaticResource ButtonBackgroundColor}"
+                        Background="{StaticResource ButtonBackgroundDisabled}"
                         Click="onGalleryRight"
                         CornerRadius="0"
                         Grid.Column="1"
                         Grid.Row="2"
-                        Content="Right"
                         x:Name="GalleryRightButton"
                         Foreground="#FFFFFF"
-                        IsEnabled="False"/>
+                        IsEnabled="False"
+                        Height="50">
+                        <Image Source="Assets/page-right-enabled.png" />
+                    </Button>
                 </Grid>
             </Border>
         </Grid>
