--- a/windows/PhotobookUI/FirstPage.xaml
+++ b/windows/PhotobookUI/FirstPage.xaml
@@ -1,65 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page
-    x:Class="PhotobookUI.FirstPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PhotobookUI"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+<Page x:Class="PhotobookUI.FirstPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:PhotobookUI"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ColorScheme.xaml"/>
+                <ResourceDictionary Source="ColorScheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
-    <Grid
-        Background="{StaticResource PrimaryColor}">
-        <Grid
-            x:Name="ProjectsGridName"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center">
-
+    <Grid Background="{StaticResource PrimaryColor}">
+        <Grid x:Name="ProjectsGridName"
+              HorizontalAlignment="Center"
+              VerticalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button
-                Grid.Row="0"
-                Grid.Column="0"
-                x:Name="addProjectButton"
-                Click="AddProjectClicked"
-                Background="{StaticResource ButtonBackgroundColor}"
-                Foreground="#FFFFFF"
-                Width="100"
-                Height="100">
-                +
-            </Button>
-            <ListView
-                Grid.Row="0"
-                Grid.Column="1"
-                Name="ProjectsListView"
-                RightTapped="OnListViewRightTapped"
-                Tapped="OpenProjectClicked"
-                SelectionMode="None">
+            <Button Grid.Row="0"
+                    Grid.Column="0"
+                    x:Name="addProjectButton"
+                    Click="AddProjectClicked"
+                    Background="{StaticResource ButtonBackgroundColor}"
+                    Foreground="#FFFFFF"
+                    Width="100"
+                    Height="100">+</Button>
+            <ListView Grid.Row="0"
+                      Grid.Column="1"
+                      Name="ProjectsListView"
+                      RightTapped="OnListViewRightTapped"
+                      Tapped="OpenProjectClicked"
+                      SelectionMode="None">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="local:ProjectItem">
                         <Grid VerticalAlignment="Center">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-
-                            <Button
-                                Grid.Column="0"
-                                Content="{x:Bind Name}"
-                                Background="{StaticResource ButtonBackgroundColor}"
-                                Foreground="#FFFFFF"
-                                Width="100"
-                                Height="100" />
+                            <Button Grid.Column="0"
+                                    Content="{x:Bind Name}"
+                                    Background="{StaticResource ButtonBackgroundColor}"
+                                    Foreground="#FFFFFF"
+                                    Width="100"
+                                    Height="100" />
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
