ui: Stetch the unstaged list view.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -215,7 +215,7 @@
                                   ScrollViewer.IsHorizontalRailEnabled="True"
                                   CanDragItems="True"
                                   CanReorderItems="False"
-                                  HorizontalAlignment="Left"
+                                  HorizontalAlignment="Stretch"
                                   AllowDrop="True"
                                   Drop="OnDropIntoUnstagedListView"
                                   DragOver="OnDragOverUnstagedListView"
