--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -219,7 +219,49 @@
                                   AllowDrop="True"
                                   Drop="OnDropIntoUnstagedListView"
                                   DragOver="OnDragOverUnstagedListView"
-                                  Background="#00FF00">
+                                  Background="{StaticResource PrimaryColor}">
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="ListViewItem">
+                                                <ListViewItemPresenter ContentTransitions="{TemplateBinding ContentTransitions}"
+                                                                       x:Name="Root"
+                                                                       Control.IsTemplateFocusTarget="True"
+                                                                       FocusVisualMargin="{TemplateBinding FocusVisualMargin}"
+                                                                       SelectionCheckMarkVisualEnabled="{ThemeResource ListViewItemSelectionCheckMarkVisualEnabled}"
+                                                                       CheckBrush="White"
+                                                                       CheckBoxBrush="{ThemeResource ListViewItemCheckBoxBrush}"
+                                                                       DragBackground="Yellow"
+                                                                       DragForeground="White"
+                                                                       FocusBorderBrush="{ThemeResource ListViewItemFocusBorderBrush}"
+                                                                       FocusSecondaryBorderBrush="{ThemeResource ListViewItemFocusSecondaryBorderBrush}"
+                                                                       PlaceholderBackground="Green"
+                                                                       PointerOverBackground="{StaticResource ButtonBackgroundColor}"
+                                                                       PointerOverForeground="White"
+                                                                       SelectedBackground="{StaticResource ButtonBackgroundColor}"
+                                                                       SelectedForeground="White"
+                                                                       SelectedPointerOverBackground="{ThemeResource ListViewItemBackgroundSelectedPointerOver}"
+                                                                       PressedBackground="{StaticResource ButtonBackgroundColor}"
+                                                                       SelectedPressedBackground="{StaticResource ButtonBackgroundColor}"
+                                                                       DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
+                                                                       DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}"
+                                                                       ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
+                                                                       HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                                       VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                                       ContentMargin="{TemplateBinding Padding}"
+                                                                       CheckMode="Overlay"
+                                                                       RevealBackground="{StaticResource PrimaryColor}"
+                                                                       RevealBorderThickness="0"
+                                                                       RevealBorderBrush="{StaticResource ButtonBackgroundColor}"
+                                                                       CornerRadius="8"
+                                                                       Height="90"
+                                                                       Width="140"></ListViewItemPresenter>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </ListView.ItemContainerStyle>
                             <ListView.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <ItemsStackPanel Orientation="Horizontal" />
@@ -227,7 +269,9 @@
                             </ListView.ItemsPanel>
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="local:ImageUIData">
-                                    <Image Source="{x:Bind FullPath}" />
+                                    <Image  Height="80"
+                                            Width="120"
+                                            Source="{x:Bind FullPath}" />
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
